<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.example.animelist.ui.AnimeViewModel" />

        <variable
            name="fragment"
            type="com.example.animelist.ui.detail.AnimeDetailFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.detail.AnimeDetailFragment">


            <ImageView
                android:id="@+id/anime_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/anime_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewmodel.id}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/anime_image"
                tools:text="id" />

            <TextView
                android:id="@+id/anime_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:text="@{viewmodel.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/anime_id"
                tools:text="@tools:sample/full_names" />

            <TextView
                android:id="@+id/anime_japanese_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewmodel.japaneseTitle}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/anime_name"
                tools:text="japanese title" />

            <TextView
                android:id="@+id/anime_opening_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewmodel.openingTheme}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/anime_japanese_title"
                tools:text="opening theme" />

            <TextView
                android:id="@+id/anime_ending_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewmodel.endingTheme}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/anime_opening_theme"
                tools:text="ending theme" />

            <TextView
                android:id="@+id/anime_plot_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{viewmodel.plotSummary}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/plot_summary_label"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/anime_vintage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewmodel.vintage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/anime_ending_theme"
                tools:text="vintage" />

            <TextView
                android:id="@+id/anime_number_of_episodes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewmodel.numberOfEpisodes}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/anime_vintage"
                tools:text="number of episodes" />

            <TextView
                android:id="@+id/anime_official_website"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:onClick="@{(v) -> fragment.openUrl(v)}"
                android:singleLine="false"
                android:text="@{viewmodel.officialWebsite}"
                android:textColor="@android:color/holo_blue_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/anime_number_of_episodes"
                tools:text="official website" />

            <TextView
                android:id="@+id/id_label"
                android:layout_width="53dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:text="@string/id"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/anime_id"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/english_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/english_name"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/anime_name"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/japanese_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/japanese_name"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/anime_japanese_title"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/opening_theme_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/opening_theme"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/anime_opening_theme"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/ending_theme_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/ending_theme"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/anime_ending_theme"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/vintage_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/vintage"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/anime_vintage"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/num_of_episodes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/number_of_episodes"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/anime_number_of_episodes"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/official_website_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/official_website"
                android:textStyle="bold"
                app:layout_constraintBaseline_toBaselineOf="@+id/anime_official_website"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/plot_summary_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/plot_summary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/anime_official_website" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="num_of_episodes_label,official_website_label,opening_theme_label,japanese_name_label,ending_theme_label,english_name_label,vintage_label"
                tools:layout_editor_absoluteX="191dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
